# indonesian-media-crawler

./: .gitignore  Cargo.toml
scripts/: cov.sh
src/: data.rs  db_utils.rs  detik.rs  error.rs  lib.rs  main.rs  persistent.rs  scraper.rs  scrapper.rs  utils.rs
src/crawler/: detik.rs  mod.rs
src/detik/: crawler.rs  data.rs  mod.rs
tests/htmls/: 1.html  2.html  4.html  inet.html  travel.html
