[package]
name = "indonesian-news-scrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
lazy-regex = "2.3.1"
lazy_static = "1.4.0"
reqwest = "0.11.13"
scraper = "0.13.0"
tokio = { version = "1.23.0", features = ["full"] }
