[package]
name = "indonesian-news-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
deadpool-sqlite = "0.5.0"
itertools = "0.10.5"
lazy-regex = "2.3.1"
lazy_static = "1.4.0"
reqwest = "0.11.13"
rusqlite = { version = "0.28.0", features = ["serde_json", "chrono"] }
scraper = "0.13.0"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.23.0", features = ["full"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
