[package]
name = "indonesian-media-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.59"
chrono = "0.4.23"
futures = "0.3.25"
itertools = "0.10.5"
lazy-regex = "2.3.1"
lazy_static = "1.4.0"
reqwest = "0.11.13"
scraper = "0.13.0"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }
thiserror = "1.0.37"
tokio = { version = "1.23.0", features = ["full"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
